--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -2,10 +2,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" /> 
+    <link rel="stylesheet" type="text/css" href="style/style.css" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Link CSS to HTML</title>
   </head>
+  <script>
+    window.addEventListener('DOMContentLoaded', function () {
+      var searchForm = document.getElementById('searchForm');
+      searchForm.addEventListener('submit', function (event) {
+        var searchInput = document.getElementById('searchInput');
+        if (searchInput.value.trim() === '') {
+          event.preventDefault();
+          alert('Please enter a search query.');
+        }
+      });
+    });
+  </script>
   <body>
     <div class="container">
       <div class="card">
