--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8" />
     <link rel="stylesheet" type="text/css" href="style/style.css" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Link CSS to HTML</title>
+    <title>BudScraper.io | Search Any Strain, get the lowest, closest prices. </title>
   </head>
   <script>
     window.addEventListener('DOMContentLoaded', function () {
